Updated architecture and design pattern

--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
+SERVER_PORT=8082
+
+
 DB_HOST=127.0.0.1
-DB_PORT=PLZ_UPDATE
-DB_USERNAME=PLZ_UPDATE
-DB_PASSWORD=PLZ_UPDATE
-DB_NAME=PLZ_UPDATE
+DB_PORT=3306
+DB_USER=user
+DB_PASS=pass
+DB_NAME=todo
+
+
